# cosmosdb-dump

./: Cargo.toml  README.md
src/: args.rs  dump_file.rs  main.rs
