[package]
name = "cosdump"
version = "0.1.0"
edition = "2021"

[dependencies]
azure_data_cosmos = { version = "0.14.0", features=["enable_reqwest_rustls"] }
clap = { version = "4.4.2", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.32.0", features=["full"] }
tokio-stream = "0.1.14"

